# aoc-2022

./: Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: build  build.yaml  rust.yaml  test  test.yaml
makefiles/: system.mk
src/: main.rs
src/day01/: README.md  calories.rs  mod.rs
src/day02/: README.md  mod.rs  moves.rs  outcome.rs  player.rs  rock_paper.rs
src/day03/: README.md  mod.rs  rucksack.rs
src/day04/: camp_cleaning.rs  mod.rs
src/day05/: mod.rs  supply_stacks.rs
src/day06/: mod.rs  tuning_trouble.rs
src/day07/: README.md  mod.rs  no_space.rs
src/day08/: mod.rs  tree_top.rs
src/day09/: mod.rs  rope_bridge.rs
